<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_doodle_shadow"
        android:text="@string/heading"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="26sp"
        android:translationX="170dp"
        android:translationY="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-200dp"
        android:text="@string/left_button"
        android:translationX="50dp"
        android:translationY="-250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="-200dp"
        android:text="@string/right_button"
        android:translationX="100dp"
        android:translationY="-250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left_button" />

    <Button
        android:id="@+id/throttle_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/throttle_button"
        android:translationX="0dp"
        android:translationY="245dp"
        app:layout_constraintBottom_toBottomOf="@+id/brake_button"
        app:layout_constraintEnd_toStartOf="@+id/brake_button"
        app:layout_constraintStart_toEndOf="@+id/gear_toggle" />

    <Button
        android:id="@+id/brake_button"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginBottom="84dp"
        android:text="@string/brake_button"
        android:translationX="35dp"
        android:translationY="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="518dp" />

    <ToggleButton
        android:id="@+id/gear_toggle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="400dp"
        android:layout_marginRight="400dp"
        android:checked="false"
        android:text="@string/gear_toggle"
        android:textOff="@string/gear_forward"
        android:textOn="@string/gear_reverse"
        android:translationX="-350dp"
        android:translationY="250dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/right_button"
        app:layout_constraintEnd_toStartOf="@+id/throttle_button"
        app:layout_constraintStart_toEndOf="@+id/right_button" />
</androidx.constraintlayout.widget.ConstraintLayout>